# blango

./: db.sqlite3  pyproject.toml
blango/: settings.py
blog/: admin.py  models.py
blog/migrations/: 0001_initial.py  0002_comment.py
templates/blog/: index.html
