[project]
name = "blango"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "MKhalid", email = "mohamed.khalid@astuteimaging.com"},
]
dependencies = [
    "django>=5.0.6",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
